--- a/Index.html
+++ b/Index.html
@@ -173,7 +173,7 @@
           <div class="card-body">
             <h5 class="card-title">PDF Version</h5>
             <p>No Figma account? View my portfolio as a PDF by clicking below.</p>
-            <a href="portfolio.pdf" class="btn btn-custom">
+            <a href="Google drive link" class="btn btn-custom">
               <i class="fas fa-plane-departure"></i> See as PDF
             </a>
           </div>
