Updated the Figma Link

--- a/Index.html
+++ b/Index.html
@@ -111,7 +111,7 @@
       padding: 10px 20px;
       font-size: 1.5rem;
       color: #fff;
-      font-weight: bold;
+      font-weight: Regular;
       cursor: pointer;
       transition: transform 0.3s ease, background 0.3s ease;
       display: inline-flex;
@@ -162,7 +162,7 @@
           <div class="card-body">
             <h5 class="card-title">Figma Experience</h5>
             <p>Do you have a Figma account? Click below to explore my interactive portfolio.</p>
-            <a href="https://www.figma.com/proto/4CMj4UI0tHNWfWg3BWlsH4/Portfolio?page-id=0%3A1&node-id=1-2&p=f&viewport=244%2C-166%2C0.14&t=W2awLcZyOyHyXqDZ-8&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A2&hide-ui=1" class="btn btn-custom">
+            <a href="https://www.figma.com/proto/4CMj4UI0tHNWfWg3BWlsH4/Portfolio?page-id=0%3A1&node-id=1-2&viewport=-53%2C-2263%2C0.17&t=c5dVtUrA07YFScWL-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A2" class="btn btn-custom">
               <i class="fas fa-plane-departure"></i> Continue with Figma
             </a>
           </div>
@@ -173,7 +173,7 @@
           <div class="card-body">
             <h5 class="card-title">PDF Version</h5>
             <p>No Figma account? View my portfolio as a PDF by clicking below.</p>
-            <a href="Google drive portfolio link" class="btn btn-custom">
+            <a href="https://drive.google.com/file/d/1LsD3jcpZVOm7pfkfAAQpD13TuW6XG5D0/view?usp=sharing" class="btn btn-custom">
               <i class="fas fa-plane-departure"></i> See as PDF
             </a>
           </div>
@@ -192,8 +192,8 @@
               <!-- Left column: Static contact info with icons only -->
               <div class="contact-info">
                 <p><i class="fas fa-envelope"></i> adimusanpro@gmail.com</p>
-                <p><i class="fas fa-phone"></i> +1 234 567 890</p>
-                <p><i class="fas fa-phone"></i> +1 987 654 321</p>
+                <p><i class="fas fa-phone"></i> +251 94 616 7154</p>
+                <p><i class="fas fa-phone"></i> +251 71 416 7154</p>
                 <p><i class="fas fa-map-marker-alt"></i> 1234 Main St, City, Country</p>
               </div>
               <!-- Right column: Form fields with placeholders -->
