--- a/Index.html
+++ b/Index.html
@@ -1,231 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Interactive Portfolio</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <!-- Adding Font Awesome for icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-  <style>
-    body {
-      background: #0d1b2a;
-      color: #fff;
-      font-family: 'Poppins', sans-serif;
-      font-size: 1.2rem;
-    }
-    h1 {
-      text-align: center;
-      font-size: 3rem;
-      margin-top: 20px;
-      color: #f39c12;
-    }
-    /* Base card styling */
-    .card {
-      background-color: #1f2a36;
-      border: none;
-      color: #fff;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    }
-    /* Only apply hover effect to cards with .hover-card */
-    .hover-card {
-      transition: transform 0.3s ease;
-    }
-    .hover-card:hover {
-      transform: translateY(-10px);
-    }
-    .card-body {
-      padding: 2.5rem;
-      text-align: center;
-    }
-    .card-title {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      color: #f39c12;
-    }
-    .btn-custom {
-      background-color: #f39c12;
-      border: none;
-      padding: 10px 18px;
-      font-size: 1.5rem;
-      border-radius: 8px;
-      transition: transform 0.3s ease;
-      display: inline-flex;
-      align-items: center;
-    }
-    .btn-custom i {
-      margin-right: 10px;
-    }
-    .btn-custom:hover {
-      background-color: #e67e22;
-      transform: scale(1.05);
-    }
-    .form-control {
-      border-radius: 8px;
-      padding: 12px;
-      font-size: 1.1rem;
-      border: 1px solid #f39c12;
-      background-color: #f8f9fa;
-      color: #333;
-      font-weight: normal;
-    }
-    .form-control:focus {
-      border-color: #e67e22;
-      box-shadow: 0 0 5px rgba(231, 126, 34, 0.5);
-    }
-    /* Contact form layout with two columns */
-    .contact-form {
-      display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
-      align-items: flex-start;
-      justify-content: center;
-    }
-    .contact-info {
-      flex: 1;
-      min-width: 250px;
-      text-align: left;
-      font-size: 1.3rem; /* Increased font size for contact details */
-    }
-    .contact-info p {
-      margin: 0 0 10px;
-    }
-    .contact-info i {
-      margin-right: 8px;
-    }
-    .form-fields {
-      flex: 1;
-      min-width: 250px;
-    }
-    .form-fields .mb-3 {
-      margin-bottom: 1rem;
-    }
-    /* Contact form button with awesome gradient and wave hover effect */
-    .contact-form button {
-      position: relative;
-      overflow: hidden;
-      background: linear-gradient(90deg, #ff9800, #ff5722);
-      border: none;
-      border-radius: 50px;
-      padding: 10px 20px;
-      font-size: 1.5rem;
-      color: #fff;
-      font-weight: Regular;
-      cursor: pointer;
-      transition: transform 0.3s ease, background 0.3s ease;
-      display: inline-flex;
-      align-items: center;
-      margin-top: 10px;
-    }
-    .contact-form button::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 0;
-      height: 100%;
-      background: rgba(255, 255, 255, 0.2);
-      transition: width 0.5s ease;
-      z-index: 0;
-    }
-    .contact-form button:hover::before {
-      width: 100%;
-    }
-    .contact-form button i,
-    .contact-form button span {
-      position: relative;
-      z-index: 1;
-    }
-    .contact-form button i {
-      margin-left: 8px;
-    }
-    /* Mobile responsiveness: stack columns vertically */
-    @media (max-width: 768px) {
-      .contact-form {
-        flex-direction: column;
-        align-items: stretch;
-      }
-      .contact-form button {
-        width: 100%;
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <script>
+        window.location.href = "https://www.figma.com/proto/4CMj4UI0tHNWfWg3BWlsH4/Portfolio?page-id=0%3A1&node-id=1-2&viewport=-53%2C-2263%2C0.17&t=c5dVtUrA07YFScWL-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A2";
+    </script>
+    <title>Portfolio</title>
 </head>
 <body>
-  <h1>Welcome to My Portfolio</h1>
-  <div class="container py-5">
-    <!-- First row: Two cards with hover effect -->
-    <div class="row">
-      <div class="col-md-6 mb-4">
-        <div class="card hover-card">
-          <div class="card-body">
-            <h5 class="card-title">Figma Experience</h5>
-            <p>Do you have a Figma account? Click below to explore my interactive portfolio.</p>
-            <a href="https://www.figma.com/proto/4CMj4UI0tHNWfWg3BWlsH4/Portfolio?page-id=0%3A1&node-id=1-2&viewport=-53%2C-2263%2C0.17&t=c5dVtUrA07YFScWL-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A2" class="btn btn-custom">
-              <i class="fas fa-plane-departure"></i> Continue with Figma
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6 mb-4">
-        <div class="card hover-card">
-          <div class="card-body">
-            <h5 class="card-title">PDF Version</h5>
-            <p>No Figma account? View my portfolio as a PDF by clicking below.</p>
-            <a href="https://drive.google.com/file/d/16Asn9s_ZBMW7YYCRgcGNtBMciFVbFjxU/view?usp=drive_link" class="btn btn-custom">
-              <i class="fas fa-plane-departure"></i> See as PDF
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Second row: Contact Me card (no hover effect) -->
-    <div class="row">
-      <div class="col-md-8 offset-md-2">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Contact Me</h5>
-            <p>If you have any questions or would like to get in touch, feel free to send me a message!</p>
-            <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
-              <input type="hidden" name="access_key" value="88d42669-7fbe-416a-af86-1b474a3166a5">
-              <!-- Left column: Static contact info with icons only -->
-              <div class="contact-info">
-                <p><i class="fas fa-envelope"></i> adimusanpro@gmail.com</p>
-                <p><i class="fas fa-phone"></i> +251 94 616 7154</p>
-                <p><i class="fas fa-phone"></i> +251 71 416 7154</p>
-                <p><i class="fas fa-map-marker-alt"></i> Addis Ababa, Ethiopia</p>
-              </div>
-              <!-- Right column: Form fields with placeholders -->
-              <div class="form-fields">
-                <div class="mb-3">
-                  <input type="text" class="form-control" name="name" placeholder="Enter your name" required>
-                </div>
-                <div class="mb-3">
-                  <input type="email" class="form-control" name="user_email" placeholder="Enter your email" required>
-                </div>
-                <div class="mb-3">
-                  <textarea class="form-control" name="message" rows="4" placeholder="Type your message here" required></textarea>
-                </div>
-                <button type="submit">
-                  <span>Send Message</span> <i class="fas fa-paper-plane"></i>
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Clear form fields on page show, even from bfcache -->
-  <script>
-    window.addEventListener("pageshow", function() {
-      const contactForm = document.querySelector("form.contact-form");
-      if (contactForm) {
-        contactForm.reset();
-      }
-    });
-  </script>
+    <p>If you are not redirected, <a href="https://www.figma.com/proto/4CMj4UI0tHNWfWg3BWlsH4/Portfolio?page-id=0%3A1&node-id=1-2&viewport=-53%2C-2263%2C0.17&t=c5dVtUrA07YFScWL-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A2">click here</a>.</p>
 </body>
 </html>
